--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,8 @@ header>.container {
     float: right;
 }
     
+.contact-form label::after {
+    content: "*"; 
+    color: blue;
+    margin-left: 4px; 
+}
